--- a/css/main_tablet.css
+++ b/css/main_tablet.css
@@ -1,379 +1,105 @@
 @charset "utf-8";
 
 @media screen and (min-width:768px) and (max-width:1199px) {
-    html {
-        font-size: 3px;
-        scroll-behavior: smooth;
-    }
-    body {
-        position: relative;
-        overflow-x: hidden;
-    }
-    .wrap{
-        width: 100%;
-        /* overflow: hidden; */
-    }
-    
-    .inner {
-        width: 100%;
-        height: 100%;
-        margin: 0 auto;
-        position: relative;
-    }
-
-    .article_category {
-        padding-top: 200px;
-    }
-
-    .article_content {
-        padding-top:16px;
-        font-size: 5em;
-    }
-
-    .button_big {
-        padding: 15px 28px;
-        font-size: 6em;
-        margin-top:16px;
-    }
-
-    .button_big:hover {
-        background-color: rgba(0, 182, 255, 0.2);
-    }
-
-    .article_title {
-        font-size: 6em;
-    }
-
-    .article_title_big {
-        font-size: 12em;
-    }
-
-    .article_category {
-        font-size: 12em;
-    }
-
-    /*HEADER*/
-    header {
-        width: 100%;
-        height: 72px;
-        /* background-color: blue; */
-        font-size: 6em;
-        font-weight: 700;
-        color:#333;
-        position: fixed;
-        z-index: 10;
-        transition-property: background-color border;
-        box-sizing: content-box;
-    }
-
-    header .inner {
-        /* background-color: aqua; */
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-
-    }
-
-    .hamburger_menu {
-        width: 24px;
-        height: 18px;
-        display: block;
-        position: relative;
-        cursor: pointer;
-        z-index: 10;
-        transition: all 1s;
-    }
-
-    .hamburger_menu span {
-        display: block;
-        width: 24px;
-        height: 2px;
-        background-color: #00B6FF;
-        margin-bottom: 6px;
-        position: absolute;
-        transition: transform 0.3s 0s, top 0.3s 0.4s, opacity 0.3s 0.3s, background-color 1s;
-    }
-
-    .hamburger_menu span:nth-of-type(1) {
-        top: 0px;
-    }
-
-    .hamburger_menu span:nth-of-type(2) {
-        top: 9px;
-    }
-
-    .hamburger_menu span:nth-of-type(3) {
-        top: 18px;
-    }
-
-    .hamburger_menu span.active {
-        transition: top 0.3s 0s, transform 0.3s 0.4s, opacity 0.3s 0.3s;
-    }
-
-    .hamburger_menu span:nth-of-type(1).active {
-        top: 9px;
-        transform: rotate(45deg);
-    }
-
-    .hamburger_menu span:nth-of-type(2).active {
-        opacity: 0;
-    }
-
-    .hamburger_menu span:nth-of-type(3).active {
-        top: 9px;
-        transform: rotate(-45deg);
-    }
-
-    .new-transition {
-        transition: top 0.3s 0s, transform 0.3s 0.4s, opacity 0.3s 0.3s;
-    }
-
-    header .inner #logo {
-        width: 100%;
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-    }
-
-    header .inner #logo a {
-        display: flex;
-        align-items: center;
-        column-gap: 24px;
-    }
-
-    
-    header .inner #logo a #logo_img {
-        width: 60px;
-        height: 60px;
-        position: relative;
-        border-radius: 60px;
-        overflow: hidden;
-    }
-
-
-    header .inner #logo a #logo_img #logo_img_blue {
-        opacity: 1;
-        position: absolute;
-        top: 0;
-        left: 0;
-        transition: all 1s;
-        width: 100%;
-    }
-
-    header .inner #logo a #logo_img #logo_img_white {
-        opacity: 0;
-        position: absolute;
-        top: 0;
-        left: 0;
-        transition: all 1s;
-        width: 100%;
-    }
-
-    header .inner #logo a span {
-        color: #00B6FF;
-    }
-
-    header #category{
+    /*MAIN SECTION*/
+    #main_section .full_inner{
         display: none;
     }
-    
-
-    header #category_wrap{
-        width: 100vw;
-        height: 0vh;
-        
-        background-color: #f3fbff;
-        position: absolute;
-        top:0;
-        padding: 0vh 5vw;
-        display: block;
-        transition: all 0.6s ease-out;
-        overflow: hidden;
+    .full_inner-middle{
+        z-index:2;
+        width:100%;
+        height:100vh;
     }
-    header #category_wrap.showCategory{
-        height: 100vh;
-        padding: 10vh 5vw;
-        visibility: visible;
+    #main-big{
+        display: none;
     }
-    header #category-middle {
-        display: flex;
-        flex-flow: column;
-        gap:50px;
-        margin-left:70px;
-        line-height: 26px;
-        position: relative;
-        
-    }
-
-    header #category-middle>.first_category-middle{
-        color:#00B6FF;
-        font-size: 18px;
+    #main_section{
         position: relative;
     }
-
-    header #category-middle .second_category-middle{
-        /* display: none; */
-        margin-top:20px;
-        line-height: 20px;
-    }
-
-    header #category-middle .second_category-middle li{
-        line-height: 30px;
-        font-size: 0.9em;
-    }
-    header #category-middle .second_category-middle li a:hover{
-        color: #00B6FF;
-    }
-    header #language_select-middle span{
-        display: flex;
-        color: #00B6FF;
-    }
-    header #language_select-middle #language-english-middle:hover{
-        color:#00B6FF;
-        cursor:pointer;
-    }
-
-    .material-icons{
-        font-size: 20px;
-        line-height: 25px;
-        color:#00B6FF;
-    }
-
-    header .first_category-middle > span{
-        display: flex;
-        align-content: center;
-        gap:6px;
-        line-height: 26px;
-    }
-
-
-    /*MAIN SECTION*/
-    
-
-    #main_section {
-        height: 6500px;
-    }
-
-    #main_section p {
-        text-align: center;
-        word-break: keep-all;
-    }
-
-    section .full_inner {
-        position: sticky;
-        top: 0px;
-        /* background-color: pink; */
-        width: 100vw;
-        height: 100vh;
-    }
-
-    section .full_inner #img_box {
+    #img_box-middle{
         position: absolute;
-        margin: 0 auto;
-        width: 500px;
-        height: 500px;
-        border-radius: 50%;
-        overflow: hidden;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
+        bottom:0;
+        width: 100%;
+        height: 100%;
         background-image: url('../img/main/howl_background.png');
         background-repeat: no-repeat;
-        background-size: auto 100%;
+        background-size: cover;
         animation: howl_background_move 200s alternate infinite;
-        background-position: 100% 50%;
-        transition: all 1s;
     }
 
-    section .full_inner #img_box #howl {
+    #img_box-middle #howl-middle{
+        width: 100%;
         position: absolute;
-        left: -25%;
-        bottom: 0%;
-        width: 150%;
-        animation: howl_move 1.5s alternate infinite;
-        transition: all 1s;
+        top:50%;
+        animation: howl_move 2s alternate infinite;
+    }
+    #studioGhibli_write-middle{
+        position: absolute;
+        left:50%;
+        transform:translateX(-50%);
+        width:  80%;
+        z-index: 1;
+        bottom:10%;
     }
 
+    .inner-middle{
+        position: relative;
+        top:100%;
+        /* background-color: pink; */
+        width: 100%;
+        height: 100%;
+        background-color: 100%;
+        
+    }
+
+    #change_img_text-middle{
+        position: absolute;
+        top:50%;
+        left:50%;
+        transform: translate(-50%, -50%);
+        text-align: center;
+        font-size: 9em;
+        font-weight: 800;
+        transition: all 0.6s;
+    }
+    
+    .colorChange{
+        animation:  text-color-change 1s;
+        animation-fill-mode: both;
+    }
+
+    @keyframes text-color-change{
+        to{
+            font-size: 10em;
+            color:#00B6FF;
+        }
+    }
 
     @keyframes howl_move {
         to {
-            transform: translate(0, 0);
+            transform: translate(0, -50%);
         }
 
         from {
-            transform: translate(5px, 0px);
+            transform: translate(5px, -50%);
         }
     }
 
     @keyframes howl_background_move {
         to {
-            background-position: 0% 50%;
+            background-position: 0%;
         }
 
         from {
-            background-color: 50% 50%;
+            background-position: 50%;
         }
     }
 
-    section .full_inner #studioGhibli_write {
-        position: absolute;
-        width: 600px;
-        top: 70%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        transition: opacity 0.5s;
-        opacity: 1;
-    }
 
-    section .full_inner #scroll_info {
-        position: absolute;
-        bottom: 10%;
-        left: 50%;
-        transform: translate(-50%);
-        width: 100px;
-        height: 100px;
-        border-radius: 50%;
-        border: 2px solid #00B6FF;
-        background-color: rgba(255, 255, 255, 0.9);
-        backdrop-filter: blur(10px);
-        color: #00B6FF;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        font-size: 4em;
-        row-gap: 4px;
-        opacity: 0;
-        transition: all 0.5s;
-    }
-
-    section .full_inner #scroll_info span {
-        color: #00B6FF;
-    }
-
-    #main_section .full_inner #change_img_box {
-        opacity: 0;
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        background-color: white;
-        transition: opacity 0.5s;
-    }
-
-    #main_section .full_inner #change_img_text {
-        font-size: 30px;
-        font-weight: 800;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        opacity: 0;
-        transition-delay: 0.5s;
-        transition: all 0.5s;
-    }
 
     /*Introduce Ghibli*/
     #introduce_ghibli .inner {
+        margin-top:100%;
         height: 1000px;
         /* background-color: #ffffff; */
         /* background-color: BLUE; */
@@ -383,9 +109,7 @@
         width: 60%;
         position: absolute;
         top: 10%;
-        left: 50%;
-        transform: translateX(-50%);
-        /* background-color: RED; */
+        left: 20%;
     }
 
     #introduce_ghibli .inner .arrow_down {
@@ -482,30 +206,10 @@
 
     #ghibli_animation .inner #pagination_area {
         width: 2%;
+        display:none;
     }
 
-    #ghibli_animation .inner #pagination_area #pagination {
-        position: sticky;
-        display: flex;
-        flex-direction: column;
-        width: 20px;
-        row-gap: 15px;
-        /* background-color: red; */
-        top: 45%;
-        transition: all 0.5s;
-    }
-
-    #ghibli_animation .inner #pagination_area #pagination a {
-        display: block;
-        width: 100%;
-        height: 20px;
-        border-radius: 24px;
-        background-color: rgba(0, 182, 255, 0.2);
-    }
-
-    #ghibli_animation .inner #pagination_area #pagination a.active {
-        background-color: #00B6FF;
-    }
+    
 
     #ghibli_animation #ghibli_animation_article1 {
         text-align: center;
@@ -1006,47 +710,5 @@
 
     #ghibli_notice button#prev span {
         transform: translate(6px, 6px);
-    }
-
-    /*footer*/
-    footer {
-        margin-top: -50px;
-        height: 300px;
-    }
-
-    footer .inner {
-        display: flex;
-        align-items: center;
-        gap: 16px;
-        padding-left: 30px;
-        padding-right: 30px;
-    }
-
-    footer .inner #description {
-        flex-grow: 1;
-        font-size: 4em;
-        color: #00B6FF;
-        font-weight: 700;
-        line-height: 160%;
-        width: 40%;
-    }
-
-    footer .inner #ghibli_site {
-        font-size: 4em;
-        color: #333333;
-        font-weight: 700;
-        text-align: right;
-    }
-
-    footer .inner div {
-        width: 36px;
-        height: 36px;
-        border-radius: 50%;
-        overflow: hidden;
-    }
-
-    footer .inner div img {
-        width: 100%;
-        height: 100%;
     }
 }
