--- a/css/sub_cellphone.css
+++ b/css/sub_cellphone.css
@@ -1,16 +1,34 @@
 @charset "utf-8";
 
-@media screen and (min-width:1200px) {
+@media screen and (max-width:767px){
+    /*header*/
     .header_blur {
         transition-delay: 0s;
     }
+    .hamburger_menu .header-middle {
+        background-color: #00B6FF;
+    }
+    #logo_img_white.header-middle{
+        opacity: 0;
+    }
+    #logo_img_blue.header-middle{
+        opacity: 1;
+    }
+    #logo_text.header-middle{
+        color: #00B6FF;
+    }
 
-    
-
+    html{
+        font-size: 2.5px;
+    }
+    .inner{
+        width:80%;
+        margin:0 auto;
+    }
     /*common*/
     .article_category{
-        padding-top:300px;
-        margin-bottom:200px;
+        padding-top:150px;
+        margin-bottom:100px;
     }
     /*movie_poster*/
     #movie_poster>.full_inner {
@@ -35,28 +53,28 @@
         height: 100vh;
     }
     #movie_poster .movie_title {
-        font-size: 16em;
+        font-size: 12em;
         display: flex;
         align-items: center;
-        justify-content: space-around;
+        justify-content: space-evenly;
         line-height: 120%;
         background-color:#00B6FF;
         color:#fff;
-        width:768px;
-        height:102px;
+        width:100%;
+        height:70px;
         font-family: 'Nanum Gothic', sans-serif;
         font-weight: 800;
         position: absolute;
-        bottom:200px;
+        bottom:150px;
         right: 0px;
     }
     #movie_poster .movie_title span{
-        font-size: 1.2em;
+        font-size: 1.8em;
         color:#fff;
         cursor:pointer;
     }
     #movie_poster .movie_description {
-        width: 400px;
+        width: 280px;
         height: 48px;
         background-color: #fff;
         color:#00B6FF;
@@ -64,12 +82,15 @@
         text-align: center;
         line-height: 48px;
         position: absolute;
-        bottom: 140px;
+        bottom: 90px;
         right:0;
         font-weight: 600;
     }
 
     /*movie_video*/
+    #movie_video{
+        position: relative;
+    }
     #movie_video .full_inner{
         width:95%;
         height:0;
@@ -87,11 +108,10 @@
         height:92vh;
         width:100%;
     }
-
       #movie_video .player_box{
        position: absolute;
-       width: calc(1920px*0.5);
-       height:calc(1080px*0.5);
+       width: 80%;
+       height: 32%;
        left:50%;
        top:45%;
        transform: translate(-50%, -50%);
@@ -105,7 +125,7 @@
         position: absolute;
         right:40px;
         top:40px;
-        font-size: 9rem;
+        font-size: 10rem;
         color:#00B6FF;
         cursor: pointer;
         opacity: 1;
@@ -128,20 +148,27 @@
     }
 
     /*movie_profile*/
+    #movie_profile .box_align{
+        position: relative;
+    }
     #movie_profile .profile_box{
-       padding: 56px 25px;
+       padding: 40px 25px;
        border-radius: 20px;
        background-color: #F2FBFF;
-       min-width: 274px;
+       width:100%;
     }
     .profile_box .titletop{
         padding-top:36px;
     }
+
     #movie_profile .box_align{
         display: flex;
         justify-content: space-between;
         align-items: flex-start;
+        flex-flow: column;
+        gap:20px;
     }
+
 
     /*Synopsis*/
 
@@ -150,20 +177,28 @@
     }
     #synopsis section{
         display: flex;
-        margin-left:30%;
-        width:calc(450px*6);
+        margin-left:15%;
+        width:2000px;
     }
     #synopsis .synGroup{
-        display: flex;
+        margin-right:100px;
+        width: 100%;
     }
     .synopsis_box{
-        width:450px;
-        min-width: 450px;
-        height: 430px;
-        border-radius:20px;
-        /* background-color:red; */
+        width:100%;
+        height: 150px;
+        border-radius:20px 20px 0px 0px;
         overflow: hidden;
         padding:45px;
+    }
+    .synopsis_content{
+        width:420px;
+        height: 280px;
+        border-radius:0px 0px 20px 20px;
+        background-color:rgba(0, 182, 255,0.05);
+        border-top:none;
+        overflow: hidden;
+        padding:35px 30px;
     }
     .synopsis_box h1{
         color:#00B6FF;
@@ -204,7 +239,7 @@
 
     /*scrollbar*/
     #scrollbar{
-        width: 900px;
+        width: 80%;
         height: 40px;
         margin: 0 auto;
         margin-top:120px;
@@ -252,36 +287,36 @@
     }
     input[type="range"]::-webkit-slider-thumb{
         appearance: none;
-        height: 50px;
-        width: 50px;
+        height: 40px;
+        width: 40px;
         background-color: #fff;
         border:10px solid #00B6FF;
         border-radius: 50%;
         pointer-events:auto;
         cursor:pointer;
-        margin-top:-22px;
+        margin-top:-17px;
     }
     input[type="range"]::-moz-range-thumb{
         appearance: none;
-        height: 50px;
-        width: 50px;
+        height: 40px;
+        width: 40px;
         background-color: #fff;
         border:10px solid #00B6FF;
         border-radius: 50%;
         pointer-events:auto;
         cursor:pointer;
-        margin-top:-22px;
+        margin-top:-17px;
     }
     input[type="range"]::-ms-thumb{
         appearance: none;
-        height: 50px;
-        width: 50px;
+        height: 40px;
+        width: 40px;
         background-color: #fff;
         border:10px solid #00B6FF;
         border-radius: 50%;
         pointer-events:auto;
         cursor:pointer;
-        margin-top:-22px;
+        margin-top:-17px;
     }
 
     .circle_box{
@@ -291,8 +326,8 @@
         align-items: center;
     }
     .circle{
-        width:50px;
-        height: 50px;
+        width:40px;
+        height: 40px;
         background-color: #eee;
         border-radius: 50%;
     }
@@ -300,8 +335,8 @@
         background-color: #00B6FF;
     }
     .circle.small{
-        width:30px;
-        height: 30px;
+        width:20px;
+        height: 20px;
     }
     .circle.small.active{
         background-color: #00B6FF;
@@ -309,19 +344,18 @@
 
     /*music*/
     #music .article_category{
-        margin-bottom: 100px;
+        margin-bottom: 80px;
     }
     #music .article_content{
         padding-top: 0px;
-        width:40%;
+        width:92%;
         margin: 0 auto;
         text-align: center;
     }
     .music_box{
-        margin-top:80px;
-        width:1200px;
-        height: 675px;
-        background-color: red;
+        width:100%;
+        height: 65.8%;
+        margin-top:50px;
         overflow: hidden;
         border-radius: 20px;
     }
@@ -337,12 +371,12 @@
     .music_box a{
         display: block;
         position: absolute;
-        width: 60px;
-        height: 60px;
+        width: 50px;
+        height: 50px;
         background-color: #fff;
         border-radius: 60px;
-        bottom:40px;
-        right:40px;
+        bottom:30px;
+        right:30px;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -351,7 +385,7 @@
         color:#00B6FF;
     }
     .music_box span{
-        line-height: 60px;
+        line-height: 50px;
         color:#bbb;
         font-size: 7rem;
     }
@@ -363,7 +397,7 @@
     #character .full_inner{
         margin-top:150px;
         background-color: rgba(0, 0, 0, 0.3);
-        height: 1200px;
+        height: 800px;
         position: relative;
     }
     #character .full_inner::before{
@@ -389,33 +423,38 @@
     #character section>div{
         display: flex;
         flex-direction: column;
-        gap:60px;
+        gap:30px;
         position: relative;
     }
     #character .article_category{
-       padding-top:200px;
+       padding-top:150px;
+    }
+    #character .firstDiv,
+    #character .secondDiv{
+        width:50%;
     }
     /*basic*/
          #character section{
             display: flex;
             flex-flow: row;
-            justify-content: space-between;
+            column-gap: 30px;
+            width:100%;
         }
         #character .character_box{
-            width: 570px;
-            height: 150px;
+            width: 100%;
+            height: 100px;
             background-color: #ffff;
             border-radius: 200px;
             display: flex;
             align-items: center;
             justify-content: space-between;
-            padding-left:calc(25px/2);
+            padding-left: 10px;
             cursor: pointer;
         }
         .character_box .main_thumbnail{
             border-radius: 50%;
-            width: 125px;
-            height: 125px;
+            width: 85px;
+            height: 85px;
             overflow: hidden;
         }
         .character_box .main_thumbnail img{
@@ -434,7 +473,7 @@
         }
         .character_box .name{
             font-size: 8rem;
-            margin-right: 66px;
+            margin-right: 40px;
             font-weight: 600;
         } 
 
@@ -449,8 +488,8 @@
         }
         
         #character .character_box.second {
-            width: 570px;
-            height: 570px;
+            width: 100%;
+            height: 380px;
             background-color: #ffff;
             border-radius: 20px;
             display: flex;
@@ -476,20 +515,20 @@
 
     .character_box.second .main_thumbnail{
         border-radius: 50%;
-        width: 220px;
-        height: 220px;
+        width: 130px;
+        height: 130px;
         overflow: hidden;
         position:relative;
-        margin-top:70px;
+        margin-top:50px;
     }
     .character_box.second .ch_left::before{
         content:'';
-        width:230px;
-        height:230px;
+        width: 140px;
+        height:140px;
         border-radius:50%;
         border: 3px solid #eee;    
         position: absolute;
-        top:62px;
+        top:42px;
         transform:translateX(-8px);
         z-index:0;
     }
@@ -511,8 +550,8 @@
         border:none;
         outline: none;
         position: absolute;
-        top:40px;
-        right:40px;
+        top:25px;
+        right:25px;
         cursor: pointer;
         display:block;
     }
@@ -528,13 +567,14 @@
     .character_box.second .name{
         font-size: 12rem;
         font-weight: 800;
-        margin-bottom:10px;
+        margin-top:32px;
+        margin-bottom:5px;
         margin-right: 0px;
     }
     .character_box.second .short{
         font-size: 5rem;
         font-weight: 600;
-        margin-bottom:35px;
+        margin-bottom:20px;
         display: block;
     }
     .character_box.second .more{
@@ -558,49 +598,53 @@
         align-items: center;
     } 
 
-    /*click*/
+    /*click*/  
+   
     #character section.third{
         flex-flow:column;
     }
     #character .character_box.third{
-        width:1200px;
-        height:760px;
+        width:200%;
+        height:600px;
         background-color: #fff;
         border-radius: 20px;
         align-items:normal;
-        transform: translateY(-100px);
+        transform: translateY(-30%);
         position:absolute;
         top:0;
         z-index:1;
+        flex-direction: column;
+        padding:50px;
     }
 
     .character_box.third .main_thumbnail{
         border-radius: 10px;
-        width: 100%;
-        height: 366px;
+        width: 80%;
+        height: 100%;
         overflow: hidden;
     }
     .character_box.third .main_thumbnail img{
-        height: 100%;
-        transform:translateX(0px);
+        height:110%;
+        transform:translateX(-60px);
     }
     .character_box.third .sub_thumbnail{
         display: flex;
-        width:100%;
+        width:20%;
+        height: 100%;
         justify-content: space-between;
-        align-items: center;
-        margin-top:20px;
+        align-items: flex-start;
+        flex-direction: column;
     }
     .character_box.third .sub_thumbnail div{
         cursor: pointer;
-        width: 184px;
-        height: 184px;
+        width: 100%;
+        height: 70px;
         overflow: hidden;
         border-radius: 10px;
     } 
     .character_box.third .sub_thumbnail img{
-        height:100%;
-        transform: translateX(-20%);
+        height:130%;
+        transform:translate(-30px,-5px);
     }
 
     .character_box.third .character_box{
@@ -608,24 +652,27 @@
         top:0;
     }
     .character_box.third .ch_left{
-        width:54%;
+        width:100%;
+        height:50%;
         display: flex;
-        flex-direction: column;
+        flex-direction: row-reverse;
         align-items: center;
         justify-content: center;
-        padding-left:55px;
+        gap:20px;
+        margin-top:32px;
     }
     .character_box.third .ch_right{
         display: flex;
-        flex-flow: column;
-        align-items: flex-start;
-        width:46%;
-        padding:110px 80px 50px 50px;
+        flex-flow: row wrap;
+        align-content: flex-start;
+        width:100%;
         position: relative;
+        justify-content: space-between;
+        row-gap: 20px;
     }
     .character_box.third .name{
         font-weight: 800;
-        font-size: 12rem;
+        font-size: 14rem;
         margin-right: 0px;
         line-height: 120%;
     }
@@ -633,25 +680,25 @@
         padding: 12px 22px;
         background-color: #eee;
         border-radius: 50px;
-        font-size: 4rem;
-        margin-top:16px;
+        font-size: 5rem;
         display: block;
+        margin-left:100px;
+        transform: translateY(-2px);
     }
     .character_box.third .introduce{
-        font-size: 4rem;
-        margin-top:25px;
+        font-size: 5rem;
         line-height: 160%;
         display: block;
     }
     .character_box.third .ch_close{
         width: 40px;
         height: 40px;
-        background-color: #fff;
+        background-color: transparent;
         border:none;
         outline: none;
         position: absolute;
-        top:50px;
-        right:50px;
+        top:30px;
+        right:36px;
         display: block;
         cursor: pointer;
     }
@@ -666,14 +713,17 @@
     }
     .character_box.third .next,
     .character_box.third .prev{
-        width: 60px;
-        height: 60px;
+        width: 40px;
+        height: 40px;
         border-radius: 60px;
         outline: none;
         border: 2px solid #bbb;
         background-color: #fff;
         cursor: pointer;
-            display: block;
+        display: block;
+    }
+    .character_box.third .prev{
+        margin-right:30px;
     }
     .character_box.third .next span,
     .character_box.third .prev span{
@@ -693,66 +743,80 @@
     .character_box.third .ch_button{
         position: absolute;
         display: flex;
-        gap:40px;
         right:50px;
-        bottom:50px;
+        bottom:30px;
     }
     .character_box.third .talk{
         display: block;
     }
     .character_box.third .talk p{
         position: absolute;
-        font-size: 10rem;
+        font-size: 6rem;
         background-color: #00B6FF;
         color:#fff;
         margin-top:10px;
-        bottom:35%;
+        bottom:15%;
         line-height:10rem;
-        padding: 14px 22px 12px;
+        padding: 8px 14px 6px;
     }
     .character_box.third .talk p:nth-child(1){
-        left:-30px;
+        top:42%;
+        bottom:auto;
+        left:60%;
     }
     .character_box.third .talk p:nth-child(2){
-        bottom:25%;
-        left:60px;
+        top:50%;
+        bottom:auto;
+        left:72%;
     } 
     .character_box.third .more,
     .character_box.third .short{
         display:none;
     }
     /*character_talk_setting*/
-    .character_1.third .talk p:nth-child(2){
-        left:110px;
+    
+    .character_2.third .talk p:nth-child(1){
+        left:65%;
+    }
+    .character_4.third .talk p:nth-child(1){
+        left:70%;
     }
     .character_4.third .talk p:nth-child(2){
-        left:120px;
+        left:80%;
     }
     .character_5.third .talk p:nth-child(2){
-        left:30px;
+        left:65%;
+    }
+    .character_box.third .actor{
+        margin-left:0px;
+    }
+    .character_6.third .talk p:nth-child(1){
+        top:50%;
+        left:70%;
+    }
+    .character_6.third .sub_thumbnail img{
+     transform: translate(-23px,-5px);
     }
     /*chracter_img_setting*/
-    .character_box.third .main_thumbnail img{
-        transform: translateX(-45px);
-    }
     .character_6.third .main_thumbnail img{
         transform:translateX(0);
     }
+    
     /*award*/
     #award .article_category{
-        margin-bottom: 150px;
+        margin-bottom: 100px;
     }
     .award_box{
         width:100%;
         display: flex;
         flex-wrap: wrap;
-        gap:45px;
+        gap:20px;
         align-content: center;
-        justify-content: center;
+        justify-content: space-around;
     }
     .award_box div{
-        width:280px;
-        height:280px;
+        width:170px;
+        height:170px;
         background: url('../img/sub/award.svg') center/cover ;
         position: relative;
     }
@@ -787,15 +851,19 @@
     #image .full_inner{
         height: 80vh;
         background: url('../img/sub/image.png');
-        margin-top:300px;
+        margin-top:150px;
         background-attachment:fixed;
         background-size: cover;
+        background-position: -500px 0px;
+        background-repeat: no-repeat;
         position: relative;
     }
     #image p{
         position: absolute;
         left:50%;
         top:50%;
+        width:100%;
+        text-align: center;
         transform: translate(-50%,-50%);
         color: #fff;
         font-size: 6rem;
@@ -803,5 +871,12 @@
     /*footer*/
     footer{
         margin-top:0px;
+    }
+    footer .inner{
+        width:100%;
+    }
+    footer .inner #ghibli_site,
+    footer .inner #description{
+     font-size: 12px;
     }
 }
