--- a/css/sub_tablet.css
+++ b/css/sub_tablet.css
@@ -184,7 +184,10 @@
         margin-left:15%;
         width:calc(450px*6);
     }
-
+    #synopsis .synGroup{
+        display: flex;
+    }
+    
     .synopsis_box{
         width:320px;
         height: 250px;
@@ -224,17 +227,16 @@
         margin-top:30px;
         font-family: 'Nanum Gothic', sans-serif;
     }
-    
-    .synopsis_img:nth-of-type(1){
+    .synGroup:nth-of-type(1) .synopsis_img{
         background: url('../img/sub/synopsis_1.jpg') center/cover;
     }
-    .synopsis_img:nth-of-type(3){
+    .synGroup:nth-of-type(2) .synopsis_img{
         background: url('../img/sub/synopsis_2.jpg') center/cover;
     }
-    .synopsis_img:nth-of-type(5){
+    .synGroup:nth-of-type(3) .synopsis_img{
         background: url('../img/sub/synopsis_3.jpg') center/cover;
     }
-    .synopsis_img:nth-of-type(7){
+    .synGroup:nth-of-type(4) .synopsis_img{
         background: url('../img/sub/synopsis_4.jpg') center/cover;
     }
 
@@ -614,7 +616,7 @@
         justify-content: center;
     }
     .award_box div{
-        width:190px;
+        width:180px;
         height:180px;
         background: url('../img/sub/award.svg') center/cover ;
         position: relative;
@@ -759,12 +761,12 @@
         padding: 12px 22px;
         background-color: #eee;
         border-radius: 50px;
-        font-size: 4.5rem;
+        font-size: 5rem;
         margin-top:16px;
         display: block;
     }
     .character_box.third .introduce{
-        font-size: 4.5rem;
+        font-size: 5rem;
         margin-top:25px;
         line-height: 160%;
         display: block;
@@ -839,11 +841,14 @@
         padding: 10px 16px 8px;
     }
     .character_box.third .talk p:nth-child(1){
-        left:-30px;
+        left:50%;
+        bottom:auto;
+        top:61%;
     }
     .character_box.third .talk p:nth-child(2){
-        bottom:23%;
-        left:60px;
+        bottom:auto;
+        top:70%;
+        left:55%;
     } 
     .character_box.third .more,
     .character_box.third .short{
@@ -851,13 +856,13 @@
     }
     /*character_talk_setting*/
     .character_1.third .talk p:nth-child(2){
-        left:110px;
+        left:62%;
     }
     .character_4.third .talk p:nth-child(2){
-        left:120px;
+        left:60%;
     }
     .character_5.third .talk p:nth-child(2){
-        left:30px;
+        left:60%;
     }
     /*chracter_img_setting*/
 
@@ -876,48 +881,46 @@
     }
     #character .character_box.third{
         width:200%;
-        height:550px;
+        height:600px;
         background-color: #fff;
         border-radius: 20px;
         align-items:normal;
-        transform: translateY(-100px);
+        transform: translateY(-30%);
         position:absolute;
         top:0;
         z-index:1;
         flex-direction: column;
         padding:50px;
-        justify-content: center;
-        gap:50px;
     }
 
     .character_box.third .main_thumbnail{
         border-radius: 10px;
-        width: 70%;
+        width: 80%;
         height: 100%;
         overflow: hidden;
     }
     .character_box.third .main_thumbnail img{
         height:110%;
-        transform:translateX(-20px);
+        transform:translateX(-60px);
     }
     .character_box.third .sub_thumbnail{
         display: flex;
+        width:20%;
         height: 100%;
         justify-content: space-between;
         align-items: flex-start;
         flex-direction: column;
-        margin-right: 13px;
     }
     .character_box.third .sub_thumbnail div{
         cursor: pointer;
-        width: 65px;
-        height: 65px;
+        width: 100%;
+        height: 70px;
         overflow: hidden;
         border-radius: 10px;
     } 
     .character_box.third .sub_thumbnail img{
-        height:100%;
-        transform: translateX(-20%);
+        height:130%;
+        transform:translate(-30px,-5px);
     }
 
     .character_box.third .character_box{
@@ -931,6 +934,8 @@
         flex-direction: row-reverse;
         align-items: center;
         justify-content: center;
+        gap:20px;
+        margin-top:32px;
     }
     .character_box.third .ch_right{
         display: flex;
@@ -938,10 +943,12 @@
         align-content: flex-start;
         width:100%;
         position: relative;
+        justify-content: space-between;
+        row-gap: 20px;
     }
     .character_box.third .name{
         font-weight: 800;
-        font-size: 12rem;
+        font-size: 14rem;
         margin-right: 0px;
         line-height: 120%;
     }
@@ -952,23 +959,22 @@
         font-size: 5rem;
         display: block;
         margin-left:100px;
+        transform: translateY(-2px);
     }
     .character_box.third .introduce{
         font-size: 5rem;
-        margin-top:25px;
         line-height: 160%;
         display: block;
-        width:60%;
     }
     .character_box.third .ch_close{
         width: 40px;
         height: 40px;
-        background-color: #fff;
+        background-color: transparent;
         border:none;
         outline: none;
         position: absolute;
-        top:50px;
-        right:50px;
+        top:30px;
+        right:36px;
         display: block;
         cursor: pointer;
     }
@@ -983,14 +989,17 @@
     }
     .character_box.third .next,
     .character_box.third .prev{
-        width: 60px;
-        height: 60px;
+        width: 40px;
+        height: 40px;
         border-radius: 60px;
         outline: none;
         border: 2px solid #bbb;
         background-color: #fff;
         cursor: pointer;
-            display: block;
+        display: block;
+    }
+    .character_box.third .prev{
+        margin-right:30px;
     }
     .character_box.third .next span,
     .character_box.third .prev span{
@@ -1010,43 +1019,59 @@
     .character_box.third .ch_button{
         position: absolute;
         display: flex;
-        gap:40px;
         right:50px;
-        bottom:50px;
+        bottom:30px;
     }
     .character_box.third .talk{
         display: block;
     }
     .character_box.third .talk p{
         position: absolute;
-        font-size: 10rem;
+        font-size: 6rem;
         background-color: #00B6FF;
         color:#fff;
         margin-top:10px;
         bottom:15%;
         line-height:10rem;
-        padding: 14px 22px 12px;
+        padding: 8px 14px 6px;
     }
     .character_box.third .talk p:nth-child(1){
-        left:-30px;
+        top:42%;
+        bottom:auto;
+        left:60%;
     }
     .character_box.third .talk p:nth-child(2){
-        bottom:25%;
-        left:60px;
+        top:50%;
+        bottom:auto;
+        left:72%;
     } 
     .character_box.third .more,
     .character_box.third .short{
         display:none;
     }
     /*character_talk_setting*/
-    .character_1.third .talk p:nth-child(2){
-        left:110px;
+    
+    .character_2.third .talk p:nth-child(1){
+        left:65%;
+    }
+    .character_4.third .talk p:nth-child(1){
+        left:70%;
     }
     .character_4.third .talk p:nth-child(2){
-        left:120px;
+        left:80%;
     }
     .character_5.third .talk p:nth-child(2){
-        left:30px;
+        left:65%;
+    }
+    .character_box.third .actor{
+        margin-left:0px;
+    }
+    .character_6.third .talk p:nth-child(1){
+        top:50%;
+        left:70%;
+    }
+    .character_6.third .sub_thumbnail img{
+     transform: translate(-23px,-5px);
     }
     /*chracter_img_setting*/
     .character_6.third .main_thumbnail img{
