--- a/css/sub_cellphone.css
+++ b/css/sub_cellphone.css
@@ -53,20 +53,20 @@
         height: 100vh;
     }
     #movie_poster .movie_title {
-        font-size: 12em;
+        font-size: 9em;
         display: flex;
         align-items: center;
         justify-content: space-evenly;
         line-height: 120%;
         background-color:#00B6FF;
         color:#fff;
-        width:100%;
-        height:70px;
+        padding: 10px 15px;
         font-family: 'Nanum Gothic', sans-serif;
         font-weight: 800;
         position: absolute;
         bottom:150px;
         right: 0px;
+        gap:10px;
     }
     #movie_poster .movie_title span{
         font-size: 1.8em;
@@ -90,8 +90,9 @@
     /*movie_video*/
     #movie_video{
         position: relative;
+        display: none;
     }
-    #movie_video .full_inner{
+    /* #movie_video .full_inner{
         width:95%;
         height:0;
         position: absolute;
@@ -145,7 +146,7 @@
     #movie_video .full_inner.active .article_title{
         opacity: 1;
         bottom:16%;    
-    }
+    } */
 
     /*movie_profile*/
     #movie_profile .box_align{
@@ -177,22 +178,24 @@
     }
     #synopsis section{
         display: flex;
-        margin-left:15%;
-        width:2000px;
+        margin-left:13%;
+        width:400%;
     }
     #synopsis .synGroup{
-        margin-right:100px;
         width: 100%;
     }
+    #synopsis .synGroup:last-child{
+        margin-right: 0px;
+    }
     .synopsis_box{
-        width:100%;
+        width:80%;
         height: 150px;
         border-radius:20px 20px 0px 0px;
         overflow: hidden;
         padding:45px;
     }
     .synopsis_content{
-        width:420px;
+        width:80%;
         height: 280px;
         border-radius:0px 0px 20px 20px;
         background-color:rgba(0, 182, 255,0.05);
@@ -390,14 +393,94 @@
         font-size: 7rem;
     }
 
-    /*character_box*/
-    #character section{
-        /* overflow: hidden; */
+    /*character_background_setting*/
+    .character_1 .main_thumbnail{
+        background: url('../img/sub/ch1-1.jpg') center/cover no-repeat;
     }
+    .character_1 .sub_thumbnail div:nth-child(1){
+        background: url('../img/sub/ch1-1.jpg') center/cover no-repeat;
+    }
+    .character_1 .sub_thumbnail div:nth-child(2){
+        background: url('../img/sub/ch1-2.jpg') center/cover no-repeat;
+    }
+    .character_1 .sub_thumbnail div:nth-child(3){
+        background: url('../img/sub/ch1-3.jpg') center/cover no-repeat;
+    }
+
+    .character_2 .main_thumbnail{
+        background: url('../img/sub/ch2-1.jpg') center/cover no-repeat;
+    }
+    .character_2 .sub_thumbnail div:nth-child(1){
+        background: url('../img/sub/ch2-1.jpg') center/cover no-repeat;
+    }
+    .character_2 .sub_thumbnail div:nth-child(2){
+        background: url('../img/sub/ch2-2.jpg') center/cover no-repeat;
+    }
+    .character_2 .sub_thumbnail div:nth-child(3){
+        background: url('../img/sub/ch2-3.jpg') center/cover no-repeat;
+    }
+
+    .character_3 .main_thumbnail{
+        background: url('../img/sub/ch3-1.jpg') center/cover no-repeat;
+    }
+    .character_3 .sub_thumbnail div:nth-child(1){
+        background: url('../img/sub/ch3-1.jpg') center/cover no-repeat;
+    }
+    .character_3 .sub_thumbnail div:nth-child(2){
+        background: url('../img/sub/ch3-2.jpg') center/cover no-repeat;
+    }
+    .character_3 .sub_thumbnail div:nth-child(3){
+        background: url('../img/sub/ch3-3.jpg') center/cover no-repeat;
+    }
+
+    .character_4 .main_thumbnail{
+        background: url('../img/sub/ch4-1.jpg') center/cover no-repeat;
+    }
+    .character_4 .sub_thumbnail div:nth-child(1){
+        background: url('../img/sub/ch4-1.jpg') center/cover no-repeat;
+    }
+    .character_4 .sub_thumbnail div:nth-child(2){
+        background: url('../img/sub/ch4-2.jpg') center/cover no-repeat;
+    }
+    .character_4 .sub_thumbnail div:nth-child(3){
+        background: url('../img/sub/ch4-3.jpg') center/cover no-repeat;
+    }
+
+    .character_5 .main_thumbnail{
+        background: url('../img/sub/ch5-1.jpg') center/cover no-repeat;
+    }
+    .character_5 .sub_thumbnail div:nth-child(1){
+        background: url('../img/sub/ch5-1.jpg') center/cover no-repeat;
+    }
+    .character_5 .sub_thumbnail div:nth-child(2){
+        background: url('../img/sub/ch5-2.jpg') center/cover no-repeat;
+    }
+    .character_5 .sub_thumbnail div:nth-child(3){
+        background: url('../img/sub/ch5-3.jpg') center/cover no-repeat;
+    }
+
+
+    .character_6 .main_thumbnail{
+        background: url('../img/sub/ch6-1.png') center/cover no-repeat;
+    }
+    .character_6 .sub_thumbnail div:nth-child(1){
+        background: url('../img/sub/ch6-1.png') center/cover no-repeat;
+    }
+    .character_6 .sub_thumbnail div:nth-child(2){
+        background: url('../img/sub/ch6-2.png') center/cover no-repeat;
+    }
+    .character_6 .sub_thumbnail div:nth-child(3){
+        background: url('../img/sub/ch6-3.jpg') center/cover no-repeat;
+    }
+
+
+
+    /*character_box*/
+
     #character .full_inner{
-        margin-top:150px;
+        margin-top:100px;
         background-color: rgba(0, 0, 0, 0.3);
-        height: 800px;
+        height: 900px;
         position: relative;
     }
     #character .full_inner::before{
@@ -423,7 +506,6 @@
     #character section>div{
         display: flex;
         flex-direction: column;
-        gap:30px;
         position: relative;
     }
     #character .article_category{
@@ -431,30 +513,31 @@
     }
     #character .firstDiv,
     #character .secondDiv{
-        width:50%;
+        width:100%;
     }
     /*basic*/
          #character section{
             display: flex;
-            flex-flow: row;
-            column-gap: 30px;
+            flex-flow: column;
             width:100%;
         }
+
         #character .character_box{
             width: 100%;
-            height: 100px;
+            height: 70px;
             background-color: #ffff;
             border-radius: 200px;
             display: flex;
             align-items: center;
-            justify-content: space-between;
             padding-left: 10px;
             cursor: pointer;
+            justify-content: space-between;
+            margin-bottom: 20px;
         }
         .character_box .main_thumbnail{
             border-radius: 50%;
-            width: 85px;
-            height: 85px;
+            width: 52px;
+            height: 52px;
             overflow: hidden;
         }
         .character_box .main_thumbnail img{
@@ -472,8 +555,9 @@
             display: none;
         }
         .character_box .name{
-            font-size: 8rem;
-            margin-right: 40px;
+            font-size: 6.5rem;
+            margin-right: 30px;
+            text-align: right;
             font-weight: 600;
         } 
 
@@ -604,47 +688,31 @@
         flex-flow:column;
     }
     #character .character_box.third{
-        width:200%;
+        width:100%;
         height:600px;
         background-color: #fff;
         border-radius: 20px;
         align-items:normal;
-        transform: translateY(-30%);
+        transform: translateY(-15%);
         position:absolute;
         top:0;
         z-index:1;
         flex-direction: column;
-        padding:50px;
+        padding:35px;
+        justify-content: normal;
     }
 
     .character_box.third .main_thumbnail{
         border-radius: 10px;
-        width: 80%;
-        height: 100%;
+        width: 100%;
+        height: 150px;
         overflow: hidden;
     }
-    .character_box.third .main_thumbnail img{
-        height:110%;
-        transform:translateX(-60px);
+    .character_5.third .main_thumbnail{
+        background-position: 0px 0px;
     }
     .character_box.third .sub_thumbnail{
-        display: flex;
-        width:20%;
-        height: 100%;
-        justify-content: space-between;
-        align-items: flex-start;
-        flex-direction: column;
-    }
-    .character_box.third .sub_thumbnail div{
-        cursor: pointer;
-        width: 100%;
-        height: 70px;
-        overflow: hidden;
-        border-radius: 10px;
-    } 
-    .character_box.third .sub_thumbnail img{
-        height:130%;
-        transform:translate(-30px,-5px);
+        display: none;
     }
 
     .character_box.third .character_box{
@@ -653,7 +721,6 @@
     }
     .character_box.third .ch_left{
         width:100%;
-        height:50%;
         display: flex;
         flex-direction: row-reverse;
         align-items: center;
@@ -668,27 +735,37 @@
         width:100%;
         position: relative;
         justify-content: space-between;
-        row-gap: 20px;
+        margin-top:30px;
     }
     .character_box.third .name{
         font-weight: 800;
         font-size: 14rem;
         margin-right: 0px;
         line-height: 120%;
+        width: 100%;
+        text-align: left;
+        position: relative;
+    }
+    .character_box.third .name::after{
+        content: '';
+        position: absolute;
+        width: 100%;
+        bottom:-10px;
+        right:0;
+        border-bottom:1px solid #eee;
     }
     .character_box.third .actor{
-        padding: 12px 22px;
-        background-color: #eee;
-        border-radius: 50px;
         font-size: 5rem;
         display: block;
         margin-left:100px;
-        transform: translateY(-2px);
+        margin-top:20px;
+        line-height: 160%;
     }
     .character_box.third .introduce{
         font-size: 5rem;
         line-height: 160%;
         display: block;
+        margin-top:20px;
     }
     .character_box.third .ch_close{
         width: 40px;
@@ -697,8 +774,8 @@
         border:none;
         outline: none;
         position: absolute;
-        top:30px;
-        right:36px;
+        top:18px;
+        right:22px;
         display: block;
         cursor: pointer;
     }
@@ -746,54 +823,15 @@
         right:50px;
         bottom:30px;
     }
-    .character_box.third .talk{
-        display: block;
-    }
-    .character_box.third .talk p{
-        position: absolute;
-        font-size: 6rem;
-        background-color: #00B6FF;
-        color:#fff;
-        margin-top:10px;
-        bottom:15%;
-        line-height:10rem;
-        padding: 8px 14px 6px;
-    }
-    .character_box.third .talk p:nth-child(1){
-        top:42%;
-        bottom:auto;
-        left:60%;
-    }
-    .character_box.third .talk p:nth-child(2){
-        top:50%;
-        bottom:auto;
-        left:72%;
-    } 
+
     .character_box.third .more,
     .character_box.third .short{
         display:none;
     }
-    /*character_talk_setting*/
-    
-    .character_2.third .talk p:nth-child(1){
-        left:65%;
-    }
-    .character_4.third .talk p:nth-child(1){
-        left:70%;
-    }
-    .character_4.third .talk p:nth-child(2){
-        left:80%;
-    }
-    .character_5.third .talk p:nth-child(2){
-        left:65%;
-    }
     .character_box.third .actor{
         margin-left:0px;
     }
-    .character_6.third .talk p:nth-child(1){
-        top:50%;
-        left:70%;
-    }
+
     .character_6.third .sub_thumbnail img{
      transform: translate(-23px,-5px);
     }
@@ -815,15 +853,15 @@
         justify-content: space-around;
     }
     .award_box div{
-        width:170px;
-        height:170px;
+        width: 45%;
+        height: 130px;
         background: url('../img/sub/award.svg') center/cover ;
         position: relative;
     }
     .award_name,
     .year{
         color:#00B6FF;
-        font-size: 5em;
+        font-size: 4.5em;
         font-weight: 700;
         line-height: 125%;
     }
@@ -838,7 +876,7 @@
     .year{
         text-align: center;
         position: absolute;
-        bottom:32%;
+        bottom:28%;
         left:50%;
         transform: translateX(-50%);
     }
@@ -867,6 +905,7 @@
         transform: translate(-50%,-50%);
         color: #fff;
         font-size: 6rem;
+        line-height: 160%;
     }
     /*footer*/
     footer{
@@ -874,6 +913,7 @@
     }
     footer .inner{
         width:100%;
+        margin-top:90px;
     }
     footer .inner #ghibli_site,
     footer .inner #description{
