--- a/css/sub_tablet.css
+++ b/css/sub_tablet.css
@@ -19,7 +19,7 @@
     }
 
     html{
-        font-size: 2.5px;
+        font-size: 3px;
     }
     .inner{
         width:80%;
@@ -60,7 +60,7 @@
         line-height: 120%;
         background-color:#00B6FF;
         color:#fff;
-        width:550px;
+        width:600px;
         height:70px;
         font-family: 'Nanum Gothic', sans-serif;
         font-weight: 800;
@@ -189,16 +189,16 @@
     }
     
     .synopsis_box{
-        width:320px;
-        height: 250px;
+        width:350px;
+        height: 310px;
         border-radius:20px;
         /* background-color:red; */
         overflow: hidden;
         padding:45px;
     }
     .synopsis_content{
-        width:320px;
-        height: 250px;
+        width:350px;
+        height: 310px;
         border-radius:20px;
         /* background-color:red; */
         overflow: hidden;
@@ -392,6 +392,87 @@
         color:#bbb;
         font-size: 7rem;
     }
+
+        /*character_background_setting*/
+        .character_1 .main_thumbnail{
+            background: url('../img/sub/ch1-1.jpg') center/cover no-repeat;
+        }
+        .character_1 .sub_thumbnail div:nth-child(1){
+            background: url('../img/sub/ch1-1.jpg') center/cover no-repeat;
+        }
+        .character_1 .sub_thumbnail div:nth-child(2){
+            background: url('../img/sub/ch1-2.jpg') center/cover no-repeat;
+        }
+        .character_1 .sub_thumbnail div:nth-child(3){
+            background: url('../img/sub/ch1-3.jpg') center/cover no-repeat;
+        }
+    
+        .character_2 .main_thumbnail{
+            background: url('../img/sub/ch2-1.jpg') center/cover no-repeat;
+        }
+        .character_2 .sub_thumbnail div:nth-child(1){
+            background: url('../img/sub/ch2-1.jpg') center/cover no-repeat;
+        }
+        .character_2 .sub_thumbnail div:nth-child(2){
+            background: url('../img/sub/ch2-2.jpg') center/cover no-repeat;
+        }
+        .character_2 .sub_thumbnail div:nth-child(3){
+            background: url('../img/sub/ch2-3.jpg') center/cover no-repeat;
+        }
+    
+        .character_3 .main_thumbnail{
+            background: url('../img/sub/ch3-1.jpg') center/cover no-repeat;
+        }
+        .character_3 .sub_thumbnail div:nth-child(1){
+            background: url('../img/sub/ch3-1.jpg') center/cover no-repeat;
+        }
+        .character_3 .sub_thumbnail div:nth-child(2){
+            background: url('../img/sub/ch3-2.jpg') center/cover no-repeat;
+        }
+        .character_3 .sub_thumbnail div:nth-child(3){
+            background: url('../img/sub/ch3-3.jpg') center/cover no-repeat;
+        }
+    
+        .character_4 .main_thumbnail{
+            background: url('../img/sub/ch4-1.jpg') center/cover no-repeat;
+        }
+        .character_4 .sub_thumbnail div:nth-child(1){
+            background: url('../img/sub/ch4-1.jpg') center/cover no-repeat;
+        }
+        .character_4 .sub_thumbnail div:nth-child(2){
+            background: url('../img/sub/ch4-2.jpg') center/cover no-repeat;
+        }
+        .character_4 .sub_thumbnail div:nth-child(3){
+            background: url('../img/sub/ch4-3.jpg') center/cover no-repeat;
+        }
+    
+        .character_5 .main_thumbnail{
+            background: url('../img/sub/ch5-1.jpg') center/cover no-repeat;
+        }
+        .character_5 .sub_thumbnail div:nth-child(1){
+            background: url('../img/sub/ch5-1.jpg') center/cover no-repeat;
+        }
+        .character_5 .sub_thumbnail div:nth-child(2){
+            background: url('../img/sub/ch5-2.jpg') center/cover no-repeat;
+        }
+        .character_5 .sub_thumbnail div:nth-child(3){
+            background: url('../img/sub/ch5-3.jpg') center/cover no-repeat;
+        }
+    
+    
+        .character_6 .main_thumbnail{
+            background: url('../img/sub/ch6-1.png') center/cover no-repeat;
+        }
+        .character_6 .sub_thumbnail div:nth-child(1){
+            background: url('../img/sub/ch6-1.png') center/cover no-repeat;
+        }
+        .character_6 .sub_thumbnail div:nth-child(2){
+            background: url('../img/sub/ch6-2.png') center/cover no-repeat;
+        }
+        .character_6 .sub_thumbnail div:nth-child(3){
+            background: url('../img/sub/ch6-3.jpg') center/cover no-repeat;
+        }
+    
 
     /*character_box*/
     #character section{
@@ -616,7 +697,7 @@
         justify-content: center;
     }
     .award_box div{
-        width:180px;
+        width:30%;
         height:180px;
         background: url('../img/sub/award.svg') center/cover ;
         position: relative;
@@ -748,7 +829,7 @@
         flex-flow: column;
         align-items: flex-start;
         width:46%;
-        padding:110px 40px 50px 40px;
+        padding:80px 40px 50px 40px;
         position: relative;
     }
     .character_box.third .name{
@@ -761,12 +842,12 @@
         padding: 12px 22px;
         background-color: #eee;
         border-radius: 50px;
-        font-size: 5rem;
+        font-size: 4.5rem;
         margin-top:16px;
         display: block;
     }
     .character_box.third .introduce{
-        font-size: 5rem;
+        font-size: 4.5rem;
         margin-top:25px;
         line-height: 160%;
         display: block;
@@ -832,13 +913,13 @@
     }
     .character_box.third .talk p{
         position: absolute;
-        font-size: 8rem;
+        font-size: 6rem;
         background-color: #00B6FF;
         color:#fff;
         margin-top:10px;
         bottom:32%;
         line-height:10rem;
-        padding: 10px 16px 8px;
+        padding: 8px 10px 6px;
     }
     .character_box.third .talk p:nth-child(1){
         left:50%;
@@ -891,6 +972,7 @@
         z-index:1;
         flex-direction: column;
         padding:50px;
+        justify-content: normal;
     }
 
     .character_box.third .main_thumbnail{
@@ -945,6 +1027,7 @@
         position: relative;
         justify-content: space-between;
         row-gap: 20px;
+        margin-top:40px;
     }
     .character_box.third .name{
         font-weight: 800;
@@ -956,10 +1039,10 @@
         padding: 12px 22px;
         background-color: #eee;
         border-radius: 50px;
-        font-size: 5rem;
+        font-size: 4.5rem;
         display: block;
         margin-left:100px;
-        transform: translateY(-2px);
+        height: 45px;
     }
     .character_box.third .introduce{
         font-size: 5rem;
@@ -1043,7 +1126,7 @@
     .character_box.third .talk p:nth-child(2){
         top:50%;
         bottom:auto;
-        left:72%;
+        left:68%;
     } 
     .character_box.third .more,
     .character_box.third .short{
@@ -1060,8 +1143,11 @@
     .character_4.third .talk p:nth-child(2){
         left:80%;
     }
+    .character_5.third .talk p:nth-child(1){
+        left:54%;
+    }
     .character_5.third .talk p:nth-child(2){
-        left:65%;
+        left:60%;
     }
     .character_box.third .actor{
         margin-left:0px;
@@ -1076,5 +1162,12 @@
     /*chracter_img_setting*/
     .character_6.third .main_thumbnail img{
         transform:translateX(0);
+    }
+    .award_name,
+    .year{
+        color:#00B6FF;
+        font-size: 4.5em;
+        font-weight: 700;
+        line-height: 125%;
     }
 }
