--- a/css/main.css
+++ b/css/main.css
@@ -19,43 +19,10 @@
     #main_section .full_inner {
         position: sticky;
         top: 0px;
-        /* background-color: pink; */
         width: 100vw;
         height: 100vh;
     }
 
-    #main_section .full_inner #img_box {
-        position: absolute;
-        margin: 0 auto;
-        width: 500px;
-        height: 500px;
-        border-radius: 50%;
-        overflow: hidden;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        background-image: url('../img/main/howl_background.png');
-        background-repeat: no-repeat;
-        background-size: auto 100%;
-        animation: howl_background_move 200s alternate infinite;
-        background-position: 100% 50%;
-        transition: all 1s;
-    }
-
-    #main_section .full_inner #img_box #howl {
-        position: absolute;
-        left: -25%;
-        bottom: 0%;
-        width: 150%;
-        animation: howl_move 1.5s alternate infinite;
-        transition: all 1s;
-    }
-
-    /* #main_section .full_inner #img_box #howl.position_change {
-        top: 20%;
-        left: 0%;
-        width: 100%
-    } */
 
     @keyframes howl_move {
         to {
@@ -77,62 +44,12 @@
         }
     }
 
-    section .full_inner #studioGhibli_write {
-        position: absolute;
-        width: 600px;
-        top: 70%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        transition: opacity 0.5s;
-        opacity: 1;
-    }
 
-    section .full_inner #scroll_info {
-        position: absolute;
-        bottom: 10%;
-        left: 50%;
-        transform: translate(-50%);
-        width: 100px;
-        height: 100px;
-        border-radius: 50%;
-        border: 2px solid #00B6FF;
-        background-color: rgba(255, 255, 255, 0.9);
-        backdrop-filter: blur(10px);
-        color: #00B6FF;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        font-size: 4em;
-        row-gap: 4px;
-        opacity: 0;
-        transition: all 0.5s;
-    }
 
     section .full_inner #scroll_info span {
         color: #00B6FF;
     }
 
-    #main_section .full_inner #change_img_box {
-        opacity: 0;
-        position: absolute;
-        width: 100vw;
-        height: 100vh;
-        background-color: white;
-        transition: opacity 0.5s;
-    }
-
-    #main_section .full_inner #change_img_text {
-        font-size: 30px;
-        font-weight: 800;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        opacity: 0;
-        transition-delay: 0.5s;
-        transition: all 0.5s;
-    }
     .full_inner-middle{
         display: none;
     }
@@ -141,8 +58,7 @@
     /*Introduce Ghibli*/
     #introduce_ghibli .inner {
         height: 1000px;
-        /* background-color: #ffffff; */
-        /* background-color: BLUE; */
+
     }
 
     #introduce_ghibli .inner img {
@@ -243,7 +159,6 @@
 
     #ghibli_animation .inner #pagination_area {
         width: 2%;
-        /* background-color: green; */
     }
 
     #ghibli_animation .inner #pagination_area #pagination {
@@ -252,7 +167,6 @@
         flex-direction: column;
         width: 24px;
         row-gap: 15px;
-        /* background-color: red; */
         top: 45%;
         transition: all 0.5s;
     }
@@ -291,7 +205,6 @@
     }
 
     #ghibli_animation #ghibli_animation_article1_all {
-        /* background-color: pink; */
         position: absolute;
         bottom: 136px;
         left: 50%;
@@ -498,7 +411,6 @@
         display: none;
     }
     #ghibli_others .inner .flip-line {
-        /* background-color: gold; */
         width: 100%;
         height: 3000px;
         padding-bottom: 500px;
@@ -509,7 +421,6 @@
         position: sticky;
         top: 30%;
         bottom: 30%;
-        /* transform: translateX(1200px); */
         transition: all 0.5s;
         width: 1200px;
     }
@@ -519,7 +430,6 @@
         column-gap: 30px;
         align-items: center;
         width: 100%;
-        /* background-color: red; */
         position: absolute;
     }
 
@@ -609,7 +519,6 @@
 
     .ghibli_world_tour:nth-child(1) {
         width: 46%;
-        /* background-color: red; */
         position: absolute;
         top: 250px;
         left: 0;
@@ -618,7 +527,6 @@
 
     .ghibli_world_tour:nth-child(2) {
         width: 46%;
-        /* background-color: red; */
         position: absolute;
         top: 350px;
         right: 0;
@@ -661,7 +569,6 @@
 
     #ghibli_notice .inner {
         overflow: hidden;
-        /* background-color: yellow; */
         padding-bottom: 100px;
     }
 
@@ -681,14 +588,12 @@
 
     #notice_article {
         position: relative;
-        /* background-color: red; */
         width: 3600px;
         height: 560px;
         display: flex;
     }
 
     #notice_article .notice {
-        /* position:absolute; */
         display: flex;
         justify-content: space-around;
         align-items: center;
@@ -747,5 +652,210 @@
 
     #ghibli_notice button#prev span {
         transform: translate(6px, 2px);
+    }
+
+
+
+
+    /*main change*/
+    /*main에서 scroll 할때 각각의 css 변경사항*/
+
+    /*BASIC*/
+    #main_section .full_inner #img_box {
+        position: absolute;
+        margin: 0 auto;
+        width: 500px;
+        height: 500px;
+        border-radius: 50%;
+        overflow: hidden;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        background-image: url('../img/main/howl_background.png');
+        background-repeat: no-repeat;
+        background-size: auto 100%;
+        animation: howl_background_move 200s alternate infinite;
+        background-position: 100% 50%;
+        transition: all 1s;
+    }
+
+    #main_section .full_inner #img_box #howl {
+        position: absolute;
+        left: -25%;
+        bottom: 0%;
+        width: 150%;
+        top:20%;
+        animation: howl_move 1.5s alternate infinite;
+        transition: all 1s;
+    }
+
+    section .full_inner #studioGhibli_write {
+        position: absolute;
+        width: 600px;
+        top: 70%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        transition: opacity 0.5s;
+        opacity: 1;
+    }
+    section .full_inner #scroll_info {
+        position: absolute;
+        bottom: 10%;
+        left: 50%;
+        transform: translate(-50%);
+        width: 100px;
+        height: 100px;
+        border-radius: 50%;
+        border: 2px solid #00B6FF;
+        background-color: rgba(255, 255, 255, 0.9);
+        backdrop-filter: blur(10px);
+        color: #00B6FF;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        font-size: 4em;
+        row-gap: 4px;
+        opacity: 0;
+        transition: all 0.5s;
+    }
+
+    #main_section .full_inner #change_img_box {
+        opacity: 0;
+        position: absolute;
+        width: 100vw;
+        height: 100vh;
+        background-color: white;
+        transition: opacity 0.5s;
+    }
+
+    #main_section .full_inner #change_img_text {
+        font-size: 30px;
+        font-weight: 800;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        opacity: 0;
+        transition-delay: 0.5s;
+        transition: all 0.5s;
+    }
+    /*여기서 부터 HEADER 지점*/
+    header .inner #logo a #logo_img #logo_img_blue {
+        opacity: 1;
+        position: absolute;
+        top: 0;
+        left: 0;
+        transition: all 1s;
+        width: 100%;
+    }
+
+    header .inner #logo a #logo_img #logo_img_white {
+        opacity: 0;
+        position: absolute;
+        top: 0;
+        left: 0;
+        transition: all 1s;
+        width: 100%;
+    }
+
+
+
+    /*FIRST*/
+    #main_section .full_inner #img_box.hdfirst {
+        background-size: cover;
+    }
+    #main_section .full_inner #img_box #howl.hdfirst {
+        bottom: 0%;
+        left: -25%;
+        width:150%;
+        top:20%;
+    }
+    section .full_inner #studioGhibli_write.hdfirst {
+        opacity:0;
+    }
+    section .full_inner #scroll_info.hdfirst {
+        opacity:0;
+    }
+    header .inner #logo a #logo_img #logo_img_blue.hdfirst {
+        opacity: 1;
+    }
+    header .inner #logo a #logo_img #logo_img_white.hdfirst {
+        opacity: 0;
+    }
+
+    /*SECOND*/
+    #main_section .full_inner #img_box.hdsecond {
+        width:100% !important;
+        height:100% !important;
+        border-radius:0;
+        opacity:1;
+        background-size: cover;
+    }
+    #main_section .full_inner #img_box #howl.hdsecond {
+        top: 20%;
+        left: 0%;
+        width:100%;
+        bottom:auto;
+    }
+    section .full_inner #studioGhibli_write.hdsecond{
+        opacity:0;
+    }
+    section .full_inner #scroll_info.hdsecond {
+        opacity:1;
+    }
+    #main_section .full_inner #change_img_box.hdsecond,
+    #main_section .full_inner #change_img_text.hdsecond{
+        opacity: 0;
+    }
+    header .inner #logo a #logo_img #logo_img_blue.hdsecond {
+        opacity: 0;
+    }
+    header .inner #logo a #logo_img #logo_img_white.hdsecond {
+        opacity: 1;
+    }
+    .first_category.hdsecond, 
+    #logo_text.hdsecond,
+    header .inner ul #language_select #language_icon.hdsecond, 
+    header .inner ul #language_select #language-korean.hdsecond {
+        color: #ffffff;
+    }
+
+
+    /*THIRD*/
+    #main_section .full_inner #img_box.hdthird {
+        width:100% !important;
+        height:99% !important;
+        border-radius:0;
+        opacity:1;
+        background-size: cover;
+    }
+    #main_section .full_inner #img_box #howl.hdthird {
+        top: 20%;
+        left: 0%;
+        width:100%;
+        bottom:auto;
+    }
+    section .full_inner #studioGhibli_write.hdthird {
+        opacity:0;
+    }
+    section .full_inner #scroll_info.hdthird {
+        opacity:1;
+    }
+    #main_section .full_inner #change_img_box.hdthird,
+    #main_section .full_inner #change_img_text.hdthird{
+        opacity: 1;
+    }
+    header .inner #logo a #logo_img #logo_img_blue.hdthird {
+        opacity: 1;
+    }
+    header .inner #logo a #logo_img #logo_img_white.hdthird {
+        opacity: 0;
+    }
+    .first_category.hdthird, 
+    #logo_text.hdthird,
+    header .inner ul #language_select #language_icon.hdthird, 
+    header .inner ul #language_select #language-korean.hdthird {
+        color: #00B6FF;
     }
 }
