--- a/css/main_tablet.css
+++ b/css/main_tablet.css
@@ -1,6 +1,6 @@
 @charset "utf-8";
 
-@media screen and (min-width:768px) and (max-width:1199px) {
+@media screen and (767px <= width < 1200px) {
     /*MAIN SECTION*/
     #main_section .full_inner{
         display: none;
