--- a/css/main_cellphone.css
+++ b/css/main_cellphone.css
@@ -1,6 +1,6 @@
 @charset "utf-8";
 
-@media screen and (max-width:767px){
+@media screen and (width < 767px){
     /*MAIN SECTION*/
     #main_section .full_inner{
         display: none;
