--- a/css/sub.css
+++ b/css/sub.css
@@ -1,6 +1,6 @@
 @charset "utf-8";
 
-@media screen and (min-width:1200px) {
+@media screen and (width >= 1200px) {
     .header_blur {
         transition-delay: 0s;
     }
