--- a/css/sub_cellphone.css
+++ b/css/sub_cellphone.css
@@ -1,6 +1,6 @@
 @charset "utf-8";
 
-@media screen and (max-width:767px){
+@media screen and (width < 767px){
     /*header*/
     .header_blur {
         transition-delay: 0s;
@@ -799,7 +799,7 @@
     }
     .award_box div{
         width: 45%;
-        height: 130px;
+        height: 176px;
         background: url('../img/sub/award.svg') center/cover ;
         position: relative;
     }
