--- a/css/sub_tablet.css
+++ b/css/sub_tablet.css
@@ -1,6 +1,6 @@
 @charset "utf-8";
 
-@media screen and (min-width:768px) and (max-width:1199px) {
+@media screen and (767px <= width < 1200px) {
     /*header*/
     .header_blur {
         transition-delay: 0s;
