--- a/css/common.css
+++ b/css/common.css
@@ -56,7 +56,6 @@
 /*toggle*/
 .opacityToggle{
     opacity:0;
-    transition-delay: background-Color 0s;
 }
 .header_blur{
     background-color: rgba(255, 255, 255,0.8);
@@ -467,7 +466,7 @@
         color:#333;
         position: fixed;
         z-index: 30;
-        transition-property: background-color border;
+        transition-property: background-color, border;
         box-sizing: content-box;
         display: flex;
         justify-content: center;
@@ -814,7 +813,7 @@
         color:#333;
         position: fixed;
         z-index: 30;
-        transition-property: background-color border;
+        transition-property: background-color, border;
         box-sizing: content-box;
     }
 
