--- a/css/main_tablet.css
+++ b/css/main_tablet.css
@@ -45,10 +45,8 @@
     .inner-middle{
         position: relative;
         top:100%;
-        /* background-color: pink; */
         width: 100%;
         height: 100%;
-        background-color: 100%;
         
     }
 
@@ -288,7 +286,7 @@
         }
 
         from {
-            left: translateY(0px);
+            transform: translateY(0px);
         }
     }
 
